# fastapi_dunossauro

./: .coverage  README.md  pyproject.toml
Praticas_sala/ApiBlog/: main.py  modelos.py
Praticas_sala/ApiBlog/rotas/: posts.py  usuarios.py
fastapi_Dunossauro/: app.py
tests/: conftest.py  test_app.py  test_db.py
