[tool.poetry]
name = "fastapi-dunossauro"
version = "0.1.0"
description = ""
authors = ["George Felipe <georgelipe2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.9.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fastapi_Dunossauro/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastapi_Dunossauro -vv'
post_test = 'coverage html'
list_run = 'fastapi dev Praticas_sala/Lista_06/main.py'

[tool.poetry.group.pytest.dependencies]
pytest-cov = "^6.1.1"
pytest = "^8.3.5"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
